# symbol-tally

./: '  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  app.cpp  app.hpp  cmake_install.cmake  main.cpp  notes.md  poppler_pdf_handler.hpp  report.md  run  run.sh  tally.cpp  tally.hpp
include/: app.hpp  poppler_pdf_handler.hpp  tally.hpp
src/: app.cpp  main.cpp  poppler_pdf_handler.cpp  tally.cpp
